# fastapi-jwt-crud

./: .gitignore  Dockerfile  alembic.ini  db.env  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py
app/server/: app.py  config.py  database.py
app/server/CRUD/: user.py
app/server/api/: auth.py  ping.py  user.py
app/server/models/: base_class.py  user.py
app/server/schemas/: auth.py  user.py
db/: users_init.sql
src/: __main__.py  app.py  config.py
src/api/: auth.py  ping.py  user.py
src/db/alembic/: env.py
src/db/alembic/versions/: 06e94930280d_init.py
src/db/crud/: session.py  users.py
src/db/models/: __init__.py  users.py
src/schemas/: auth.py  users.py
